# tuubaa-rs

./: Cargo.toml
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20240711120712_dev/: migration.sql
prisma/migrations/20240720201513_dev/: migration.sql
prisma/migrations/20240720213154_dev/: migration.sql
src/: main.rs  model.rs  modules.rs  prisma.rs
src/modules/: ticket.rs  voice.rs
src/modules/voice/: commands.rs  events.rs
