[package]
name = "tuubaa-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
poise = "0.6.1"
# serenity = "0.12.2"
tokio = { version = "1.38.0", features = ["full"] }
dotenvy = "0.15.7"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
serde = "1.0.204"
# prisma-cli = { path = "./prisma-cli" }


# [alias]
# p = "run -p prisma-cli --"
# ca = "check"

[workspace]
members = ["prisma-cli"]
